objects/Money_Transfer__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Money Transfers</relationshipLabel>
        <relationshipName>Money_Transfers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From_Account__c</fullName>
        <label>From Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking - x0032</fullName>
                </value>
                <value>
                    <fullName>Brokerage - x7365</fullName>
                </value>
                <value>
                    <fullName>National Bank [EXTERNAL]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Account__c</fullName>
        <label>To Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking - x0032</fullName>
                </value>
                <value>
                    <fullName>Brokerage - x7365</fullName>
                </value>
                <value>
                    <fullName>National Bank [EXTERNAL]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Money Transfer</label>
    <nameField>
        <displayFormat>TX-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Money Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>